; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_vino.c_vino_capture.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_vino.c_vino_capture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.vino_channel_settings = type { i32 }
%struct.vino_framebuffer = type { i64, i32 }

@VINO_FRAMEBUFFER_IN_USE = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i32 0, align 4
@vino_drvdata = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vino_channel_settings*, %struct.vino_framebuffer*)* @vino_capture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vino_capture(%struct.vino_channel_settings* %0, %struct.vino_framebuffer* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vino_channel_settings*, align 8
  %5 = alloca %struct.vino_framebuffer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.vino_channel_settings* %0, %struct.vino_channel_settings** %4, align 8
  store %struct.vino_framebuffer* %1, %struct.vino_framebuffer** %5, align 8
  store i32 0, i32* %6, align 4
  %9 = load %struct.vino_framebuffer*, %struct.vino_framebuffer** %5, align 8
  %10 = getelementptr inbounds %struct.vino_framebuffer, %struct.vino_framebuffer* %9, i32 0, i32 1
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.vino_framebuffer*, %struct.vino_framebuffer** %5, align 8
  %14 = getelementptr inbounds %struct.vino_framebuffer, %struct.vino_framebuffer* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @VINO_FRAMEBUFFER_IN_USE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i32, i32* @EBUSY, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %6, align 4
  br label %21

21:                                               ; preds = %18, %2
  %22 = load i64, i64* @VINO_FRAMEBUFFER_IN_USE, align 8
  %23 = load %struct.vino_framebuffer*, %struct.vino_framebuffer** %5, align 8
  %24 = getelementptr inbounds %struct.vino_framebuffer, %struct.vino_framebuffer* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  %25 = load %struct.vino_framebuffer*, %struct.vino_framebuffer** %5, align 8
  %26 = getelementptr inbounds %struct.vino_framebuffer, %struct.vino_framebuffer* %25, i32 0, i32 1
  %27 = load i64, i64* %7, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* %26, i64 %27)
  %29 = load i32, i32* %6, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %21
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %3, align 4
  br label %56

33:                                               ; preds = %21
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vino_drvdata, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @spin_lock_irqsave(i32* %35, i64 %36)
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vino_drvdata, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 1
  %40 = load i64, i64* %8, align 8
  %41 = call i32 @spin_lock_irqsave(i32* %39, i64 %40)
  %42 = load %struct.vino_channel_settings*, %struct.vino_channel_settings** %4, align 8
  %43 = load %struct.vino_framebuffer*, %struct.vino_framebuffer** %5, align 8
  %44 = call i32 @vino_dma_setup(%struct.vino_channel_settings* %42, %struct.vino_framebuffer* %43)
  %45 = load %struct.vino_channel_settings*, %struct.vino_channel_settings** %4, align 8
  %46 = call i32 @vino_dma_start(%struct.vino_channel_settings* %45)
  %47 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vino_drvdata, align 8
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 1
  %49 = load i64, i64* %8, align 8
  %50 = call i32 @spin_unlock_irqrestore(i32* %48, i64 %49)
  %51 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vino_drvdata, align 8
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 0
  %53 = load i64, i64* %7, align 8
  %54 = call i32 @spin_unlock_irqrestore(i32* %52, i64 %53)
  %55 = load i32, i32* %6, align 4
  store i32 %55, i32* %3, align 4
  br label %56

56:                                               ; preds = %33, %31
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @vino_dma_setup(%struct.vino_channel_settings*, %struct.vino_framebuffer*) #1

declare dso_local i32 @vino_dma_start(%struct.vino_channel_settings*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
